--- a/src/app/home-prestador/home-prestador.page.html
+++ b/src/app/home-prestador/home-prestador.page.html
@@ -55,7 +55,7 @@
       <ion-icon name="document-text-outline" class="icone-procurar-final-fixo verde-principal"></ion-icon>
       <ion-label class="texto-procurar-final-fixo verde-principal-texto">PROCURAR PEDIDO</ion-label>
     </div>
-    <ion-button fill="clear" class="botao-detalhe-final-fixo verde-final-fixo centralizado-tela-botao abaixo-procurar">Ir para tela de solicitações</ion-button>
+    <ion-button fill="clear" class="botao-detalhe-final-fixo verde-final-fixo centralizado-tela-botao abaixo-procurar">Ir para tela de serviços</ion-button>
     <ion-button fill="outline" size="small" class="centralizado-tela-botao" [routerLink]="['/navegacao-teste-front']">NAVEGAR</ion-button>
 
   </div>
