Alteração de tela home-prestador para acabar com o erro do html

--- a/src/app/home-prestador/home-prestador.page.html
+++ b/src/app/home-prestador/home-prestador.page.html
@@ -58,6 +58,6 @@
     <ion-button fill="clear" class="botao-detalhe-final-fixo verde-final-fixo centralizado-tela-botao abaixo-procurar">Ir para tela de serviços</ion-button>
     <ion-button fill="outline" size="small" class="centralizado-tela-botao" [routerLink]="['/navegacao-teste-front']">NAVEGAR</ion-button>
 
+  </div>
   <app-footer-global></app-footer-global>
-
 </ion-content>
