--- a/src/app/inicial/inicial.page.scss
+++ b/src/app/inicial/inicial.page.scss
@@ -15,17 +15,15 @@ ion-content {
     background-image: url('../../assets/imagens/fundo-arvores-removebg-preview.png');
     background-repeat: repeat-x;
     background-size: contain;
-    background-position: center;
+    background-position: bottom;
     width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center; /* Centraliza horizontalmente o conteúdo interno */
   }
   
   .logo-container {
-    margin-bottom: 40px;
-    width: 150px;
+    max-width: 180px;
   }
   
   .logo-container img {
@@ -35,7 +33,7 @@ ion-content {
   
   .form-container {
     width: 80%;
-    margin-bottom: 20px;
+    margin-bottom: 200px;
   }
   
 h1{
@@ -43,6 +41,8 @@ h1{
     color: #000000;
     margin: 0;
     text-align: center;
+    margin-bottom: 40px;
+    font-family: 'Inria Serif', serif;
 }
 
 span {
@@ -56,4 +56,8 @@ span {
 .btnAcesso button.button-native {
     background-color: #276040 !important;
     background: #276040 !important;
+}
+
+.btnAcesso{
+  --background: #276040 !important;
 }
