Criado Component Global Header Endereco

--- a/src/app/chat/chat.page.html
+++ b/src/app/chat/chat.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>chat</ion-title>
+    <app-header-endereco-global [endereco]="'Endereço do Usuário'"></app-header-endereco-global>
   </ion-toolbar>
 </ion-header>
 
