--- a/src/app/chat/chat.page.scss
+++ b/src/app/chat/chat.page.scss
@@ -6,7 +6,7 @@ ion-content {
   align-items: center;
   position: relative;
   display: flex;
-  color: #000;
+  color: #000000
 }
 
 .contentChat {
