--- a/src/app/cadastro-prestador/cadastro-prestador.page.html
+++ b/src/app/cadastro-prestador/cadastro-prestador.page.html
@@ -33,7 +33,7 @@
         </ion-item>
       </div>
 
-      <ion-button expand="block" class="register-button">Submit</ion-button>
+      <ion-button expand="block" class="register-button">Cadastrar-se</ion-button>
     </div>
   </div>
 
