--- a/src/app/home-prestador/home-prestador.page.html
+++ b/src/app/home-prestador/home-prestador.page.html
@@ -1,4 +1,4 @@
-<ion-content class="no-scroll">
+<ion-content>
   <div class="container-final-fixo">
     <div class="header-final-fixo header-bg-branco">
       <div class="botao-leilao-header" (click)="abrirLeilao()">Leilão</div>
@@ -59,5 +59,5 @@
     <ion-button fill="outline" size="small" class="centralizado-tela-botao" [routerLink]="['/navegacao-teste-front']">NAVEGAR</ion-button>
 
   </div>
-  <app-footer-global></app-footer-global>
 </ion-content>
+<app-footer-global></app-footer-global>
