--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,17 +1,16 @@
 <ion-tabs>
 
-  <ion-tab-bar slot="bottom">
+  <ion-tab-bar slot="bottom" *ngIf="showTabBar">
     <ion-tab-button tab="tab1" href="/tabs/tab1">
-      <ion-icon aria-hidden="true" name="home-outline"></ion-icon>
-      <ion-label>Inicio</ion-label>
+      <ion-label>Início</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2" href="/tabs/tab2">
+    <ion-tab-button tab="tab2" href="/tabs/tab2" >
       <ion-icon aria-hidden="true" name="document-text"></ion-icon>
       <ion-label>Pedidos</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3" href="/app/perfil-prestador">
+    <ion-tab-button tab="tab3" href="/tabs/tab3">
       <ion-icon aria-hidden="true" name="person-circle"></ion-icon>
       <ion-label>Perfil</ion-label>
     </ion-tab-button>
