--- a/src/app/chat/chat.page.html
+++ b/src/app/chat/chat.page.html
@@ -25,7 +25,7 @@
           </div>
 
           <div class="inicioChatBl">
-            <img src="../../assets/imagens/icones/iconeFavorite.png">
+            <img src="../../assets/imagens/icones/iconeFavorite.png" class="iconeFavorito" width="24" height="24">
           </div>
     </div>
 
