alterações footer e header

--- a/src/app/home-cliente/home-cliente.page.html
+++ b/src/app/home-cliente/home-cliente.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <app-toolbar-global [titulo]="'Home'" [mostrarBotaoVoltar]="false"></app-toolbar-global>
+    <app-toolbar-global [titulo]="'Início'" [mostrarBotaoVoltar]="false"></app-toolbar-global>
   </ion-toolbar>
 </ion-header>
 
@@ -10,13 +10,13 @@
       <img class="img-logo" src="/assets/imagens/logo-app-coleta-verde.png" alt="logo-app-coleta-verde">
     </div>
 
-    <div class="atalhos-home"> 
+    <div class="atalhos-home">
       <h2>COLETA DE ENTULHO</h2>
       <p>Resto de tijolo, caliça e madeira</p>
       <ion-button expand="block">Solicitar</ion-button>
     </div>
 
-    <div class="atalhos-home"> 
+    <div class="atalhos-home">
       <h2>COLETA DE LIXO COMUM</h2>
       <p>Reciclaveis, orgânico</p>
       <ion-button expand="block">Solicitar</ion-button>
