--- a/src/app/home-prestador/home-prestador.page.html
+++ b/src/app/home-prestador/home-prestador.page.html
@@ -1,12 +1,9 @@
+  <ion-header [translucent]="true">
+    <ion-toolbar>
+    <app-toolbar-global [titulo]="'Início'" [mostrarBotaoVoltar]="false"></app-toolbar-global>
+    </ion-toolbar>
+  </ion-header>
 <ion-content>
-  <div class="container-final-fixo">
-    <div class="header-final-fixo header-bg-branco">
-      <div class="botao-leilao-header" (click)="abrirLeilao()">Leilão</div>
-      <ion-label class="endereco-usuario-final-fixo">Início</ion-label>
-      <div class="icones-header-final-fixo">
-        <ion-icon name="notifications-outline" class="icone-header-final-fixo notificacao-verde"></ion-icon>
-      </div>
-    </div>
     <div class="linha-separadora-topo"></div>
 
     <div class="perfil-info-final-fixo card-cinza">
@@ -58,6 +55,6 @@
     <ion-button fill="clear" class="botao-detalhe-final-fixo verde-final-fixo centralizado-tela-botao abaixo-procurar">Ir para tela de serviços</ion-button>
     <ion-button fill="outline" size="small" class="centralizado-tela-botao" [routerLink]="['/navegacao-teste-front']">NAVEGAR</ion-button>
 
-  </div>
+
 </ion-content>
 <app-footer-global></app-footer-global>
