--- a/src/app/pedido-cliente/pedido-cliente.page.html
+++ b/src/app/pedido-cliente/pedido-cliente.page.html
@@ -41,26 +41,4 @@
     </ion-card>
   </div>
 </ion-content>
-
-<ion-footer>
-  <ion-toolbar>
-    <ion-tabs>
-      <ion-tab-bar slot="bottom">
-        <ion-tab-button tab="inicio">
-          <ion-icon name="home-outline"></ion-icon>
-          <ion-label>Início</ion-label>
-        </ion-tab-button>
-
-        <ion-tab-button tab="solicitacoes">
-          <ion-icon name="list-outline"></ion-icon>
-          <ion-label>Solicitações</ion-label>
-        </ion-tab-button>
-
-        <ion-tab-button tab="perfil">
-          <ion-icon name="person-circle-outline"></ion-icon>
-          <ion-label>Perfil</ion-label>
-        </ion-tab-button>
-      </ion-tab-bar>
-    </ion-tabs>
-  </ion-toolbar>
-</ion-footer>
+<app-footer-global></app-footer-global>
