Erros corrigidos(Conif e Prestador)

--- a/src/app/configuracoes/configuracoes.page.html
+++ b/src/app/configuracoes/configuracoes.page.html
@@ -7,7 +7,6 @@
 
   <div class="content">
     <ion-list class="settings-list">
-
       <ion-item button detail="false" class="custom-item-icon">
         <ion-label>Gerenciar Notificações</ion-label>
         <ion-icon name="chevron-forward" slot="end"></ion-icon>
@@ -22,9 +21,9 @@
         <ion-label>Sair</ion-label>
         <ion-icon name="chevron-forward" slot="end"></ion-icon>
       </ion-item>
-
     </ion-list>
   </div>
-</ion-content>
 
-<app-footer-global></app-footer-global>
+  <!-- Footer dentro do ion-content -->
+  <app-footer-global></app-footer-global>
+</ion-content>
