Att Pag Cardapio

--- a/src/app/navegacao-teste-front/navegacao-teste-front.page.html
+++ b/src/app/navegacao-teste-front/navegacao-teste-front.page.html
@@ -79,5 +79,9 @@
       Tela solicitação
     </ion-button>
 
+    <ion-button [routerLink]="['/cardapio']">
+      Tela Cardapio
+    </ion-button>
+
   </div>
 </ion-content>
