--- a/src/app/home-cliente/home-cliente.page.scss
+++ b/src/app/home-cliente/home-cliente.page.scss
@@ -1,84 +1,85 @@
-  .bgd-superior {
-    background: rgb(233, 237, 237);
-    background-image: url('/assets/imagens/fundo-arvores-removebg-preview.png'); 
-    background-repeat: no-repeat;
-    background-size: cover; /* ou cover, se preferir */
-    background-position: center;
-    height: 35vh;
-  }
-
-.img-logo{
-    display: block;
-    margin: 0 auto;
-    height: 25vh;
-    width: 25vh;
+.bgd-superior {
+  background: rgb(233, 237, 237);
+  background-image: url("/assets/imagens/fundo-arvores-removebg-preview.png");
+  background-repeat: no-repeat;
+  background-size: cover; /* ou cover, se preferir */
+  background-position: center;
+  height: 35vh;
 }
 
-ion-button{
-    margin-top: 10px;
-    margin-left: 16px;
-    margin-right: 16px;
-    padding: 10px;
-    --border-radius: 20px;
-    --background: #0a4e23;
-    text-transform: capitalize;
+.img-logo {
+  display: block;
+  margin: 0 auto;
+  height: 25vh;
+  width: 25vh;
+  padding: 30px;
 }
 
-.atalhos-home{
-    padding-top: 15px;
-    text-align: center;
+ion-button {
+  margin-top: 10px;
+  margin-left: 16px;
+  margin-right: 16px;
+  padding: 10px;
+  --border-radius: 20px;
+  --background: #0a4e23;
+  text-transform: capitalize;
 }
 
-h2{
-    color: #0a4e23;
-    text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
-    margin: 0;
+.atalhos-home {
+  padding-top: 15px;
+  text-align: center;
 }
 
-p{
-    margin: 0;
+h2 {
+  color: #0a4e23;
+  text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
+  margin: 0;
+}
+
+p {
+  margin: 0;
 }
 
 .carrossel {
-    display: flex;
-    overflow-x: auto;
-    gap: 10px;
-    scroll-snap-type: x mandatory;
-  }
-  
-ion-card{
-    display: flex;
-    background-color: #c4d3c5;
-    border-radius: 15px;
-    height: 120px;
+  display: flex;
+  overflow-x: auto;
+  gap: 10px;
+  scroll-snap-type: x mandatory;
 }
 
-ion-card-content{
-    display: flex;
-    color: #0a4e23;
-    font-weight: bold;
-    font-size: 16px;
-    flex: 1;
-    align-items: center;
-    justify-content: center;
-    padding: 16px; 
+ion-card {
+  display: flex;
+  background-color: #c4d3c5;
+  border-radius: 15px;
+  height: 120px;
+}
+
+ion-card-content {
+  display: flex;
+  color: #0a4e23;
+  font-weight: bold;
+  font-size: 16px;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+  padding: 16px;
 }
 
 ion-card-header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .card {
-    flex: 0 0 auto;
-    width: 90%;
-    scroll-snap-align: start;
-    padding: 5px;
-    transition: transform 0.3s ease;
-  }
-  
-  .img-card{
-    height: 10vh;
-    width: 10vh;
-  }
+.card {
+  flex: 0 0 auto;
+  width: 90%;
+  scroll-snap-align: start;
+  padding: 5px;
+  transition: transform 0.3s ease;
+}
+
+.img-card {
+  height: 10vh;
+  width: 10vh;
+}
