--- a/src/app/cardapio/cardapio.page.html
+++ b/src/app/cardapio/cardapio.page.html
@@ -5,8 +5,16 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <div class="contentChat">
-    <div class="inicioChat">
+  <div class="CardapioHeader">
+    <img src="../../assets/imagens/logo-app-coleta-verde.png" alt="Logo Coleta Verde">
+  </div>
+  
+  <div class="contentCardapio">
+    
+
+    <div class="inicioCardapio">
+
+      
 
           <div class="inicioChatBl">
             <ion-toolbar>
