--- a/src/app/cadastro-cliente/cadastro-cliente.page.html
+++ b/src/app/cadastro-cliente/cadastro-cliente.page.html
@@ -13,12 +13,7 @@
 
         <ion-item>
           <ion-label position="floating">CNPJ da Empresa</ion-label>
-          <ion-input type="text" class="input-field" [(ngModel)]="cnpjEmpresa"></ion-input>
-        </ion-item>
-
-        <ion-item>
-          <ion-label position="floating">Nome Completo do Representante</ion-label>
-          <ion-input type="text" class="input-field" [(ngModel)]="nomeRepresentante"></ion-input>
+          <ion-input type="text" class="input-field" [(ngModel)]="cnpj"></ion-input>
         </ion-item>
 
         <ion-item>
@@ -33,7 +28,7 @@
         </ion-item>
       </div>
 
-      <ion-button expand="block" class="register-button">Submit</ion-button>
+      <ion-button expand="block" class="register-button" (click)="onSubmit()">Submit</ion-button>
     </div>
   </div>
 </ion-content>
