--- a/src/app/solicitacao/solicitacao.page.scss
+++ b/src/app/solicitacao/solicitacao.page.scss
@@ -51,3 +51,14 @@ button{
 button:hover{
     background-color: #09451f;
 }
+.btnend{
+    margin-top: 30px;
+    padding: 10px;
+    border-radius: 15px;
+    background-color: #0A4E23;
+    color: white;
+    width: auto;
+}
+.btnend:hover{
+    background-color: #09451f;
+}
