--- a/src/app/cardapio/cardapio.page.html
+++ b/src/app/cardapio/cardapio.page.html
@@ -8,41 +8,56 @@
   <div class="CardapioHeader">
     <img src="../../assets/imagens/logo-app-coleta-verde.png" alt="Logo Coleta Verde">
   </div>
-  
+
+  <div class="blocoSelecione">
+    <div><span>SELECIONE O SEU SERVIÇO...</span></div>
+    <div><img src="../../assets/imagens/icones/iconeFiltro.png" /></div>
+  </div>
+
   <div class="contentCardapio">
-    
 
     <div class="inicioCardapio">
 
-      
+      <div class="blocoInfos">
+        <div class="blocoInfosEsq">
+          <span class="blocoInfosHorario">Horário:12h e 30min</span>
+          <span class="blocoInfosData">Dia:15/04/2025 </span>
+          <span class="blocoInfosEndereco">Endereço da Empresa</span>
+        </div>
+        <div class="blocoInfosDir">
+          <span class="blocoInfosPreco">R$ 30,00</span>
+        </div>
+      </div>
 
-          <div class="inicioChatBl">
-            <ion-toolbar>
-              <ion-buttons slot="start">
-                <ion-back-button defaultHref="/"></ion-back-button>
-              </ion-buttons>
-            </ion-toolbar>
-          </div>
+      <div class="blocoInfos">
+        <div class="blocoInfosEsq">
+          <span class="blocoInfosHorario">Horário:12h e 30min</span>
+          <span class="blocoInfosData">Dia:15/04/2025 </span>
+          <span class="blocoInfosEndereco">Endereço da Empresa</span>
+        </div>
+        <div class="blocoInfosDir">
+          <span class="blocoInfosPreco">R$ 30,00</span>
+        </div>
+      </div>
 
-          <div class="inicioChatBl">
-            <img src="../../assets/imagens/fotoPerfil/fotoPerfilTrabalhador.png" style="width: 45px; height: 45px;"/>
-          </div>
+      <div class="blocoInfos">
+        <div class="blocoInfosEsq">
+          <span class="blocoInfosHorario">Horário:12h e 30min</span>
+          <span class="blocoInfosData">Dia:15/04/2025 </span>
+          <span class="blocoInfosEndereco">Endereço da Empresa</span>
+        </div>
+        <div class="blocoInfosDir">
+          <span class="blocoInfosPreco">R$ 30,00</span>
+        </div>
+      </div>
 
-          <div class="inicioChatBl">
-            <p>Cardapio</p>
-          </div>
 
-          <div class="inicioChatBl">
-            <img src="../../assets/imagens/icones/iconeFavorite.png" class="iconeFavorito" width="24" height="24">
-          </div>
+
     </div>
 
-    
   </div>
 
 
 </ion-content>
 
 <app-footer-global></app-footer-global>
-
-
