--- a/src/app/cardapio/cardapio.page.scss
+++ b/src/app/cardapio/cardapio.page.scss
@@ -1,30 +1,76 @@
 .contentCardapio {
-    max-width: 700px;
-    margin: 0 auto;
+  max-width: 700px;
+  margin: 0 auto;
+  margin-bottom: 40px;
+}
+
+.blocoSelecione {
+  display: flex;
+  padding: 10px 0;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 1px solid #CAC4D0;
+  color: #21481C;
+  font-size: 20px;
 }
 
 .inicioCardapio {
-    display: inline-flex;
-    margin-top: 15px;
-    width: 100%;
-    justify-content: center;
-    gap: 20px;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin-top: 15px;
+  width: 100%;
+  justify-content: center;
+  gap: 20px;
+  align-items: center;
+  padding: 0 20px;
 }
 
-.CardapioHeader{
-    background-image: url('../../assets/imagens/fundo-arvores-removebg-preview.png');
-    background-repeat: repeat-x;
-    background-size: contain;
-    background-position: bottom;
-    width: 100%;
-    min-height: 350px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.CardapioHeader {
+  background-image: url('../../assets/imagens/fundo-arvores-removebg-preview.png');
+  background-repeat: repeat-x;
+  background-size: contain;
+  background-position: bottom;
+  width: 100%;
+  min-height: 350px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.CardapioHeader img{
-    max-width: 150px;
-    margin-top: 40px;
+.CardapioHeader img {
+  max-width: 150px;
+  margin-top: 40px;
+}
+
+.blocoInfos {
+  display: flex;
+  width: 100%;
+  background-color: #C4D3C5;
+  border-radius: 12px;
+  padding: 10px 20px;
+  justify-content: center;
+  gap: 20px;
+  box-shadow: #cac4d0 4px 3px 5px;
+}
+
+.blocoInfosEsq {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.blocoInfosEsq span {
+  font-size: 18px;
+}
+
+.blocoInfosDir {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+span.blocoInfosPreco {
+  font-size: 36px;
+  color: #21481C;
+  font-weight: 600;
 }
